# advent-of-code-2020

./: CMakeLists.txt  README.md  main.c
challenges/: day01.c  day01.h  day02.c  day02.h  day03.c  day03.h  day04.c  day04.h  day05.c  day05.h  day06.c  day06.h  day07.c  day07.h  day08.c  day08.h  day09.c  day09.h  day1.c  day1.h  day10.c  day10.h  day11.c  day11.h  day12.c  day12.h  day13.c  day13.h  day14.c  day14.h  day15.c  day15.h  day2.c  day3.c  day3.h  day4.c  day4.h  day5.c  day5.h  day6.c  (+7 more)
